[package]
name = "fsa"
version = "0.1.0"
authors = ["Nick Vathis <nvathis@gmail.com>"]
build = "build_lalrpop.rs"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1.7.2"
lazy_static = "1.4.0"
nicole = { git = "ssh://git@github.com/softsilverwind/nicole.git", branch = "develop" }
nicole_derive = { git = "ssh://git@github.com/softsilverwind/nicole_derive.git" }
indoc = "2.0.1"

[build-dependencies]
lalrpop = "0.19.8"
